testsuite/tests/th/T18740c.stderr

T18740c.hs:9:1: error:
    • Illegal term-level use of the type variable ‘a’
        bound at T18740c.hs:9:1
    • In the expression: a
      In an equation for ‘f’: f (Proxy :: Proxy a) = a
